# Kinect2TCPIP

./: CMakeLists.txt  ClientMain.cpp  ClientWidget.cpp  ClientWidget.h  ClientWidget.ui  ClientWindow.cpp  ClientWindow.h  ClientWindow.ui  CompileScript.sh  MultiClientWindow.cpp  README.md  ServerWindow.cpp  ServerWindow.h  ServerWindow.ui  define.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mykinect.cpp  mykinect.h  mykinect_widget.cpp  mykinect_widget.h  mykinect_widget.ui  updateFromGit.sh
src/: CMakeLists.txt  ClientWidget.cpp  ClientWidget.h  ClientWidget.ui  CloudViewer.cpp  CloudViewer.ui  KinectWidget.cpp  KinectWidget.h  KinectWidget.ui  MultiClientWindow.cpp  MultiClientWindow.h  MultiClientWindow.ui  ServerWindow.cpp  ServerWindow.h  ServerWindow.ui  Transform.h  TransformationWidget.cpp  TransformationWidget.h  TransformationWidget.ui  define.h
src/Client/: CMakeLists.txt  ClientMain.cpp  ClientWidget.cpp  ClientWidget.h  ClientWidget.ui  MultiClientWindow.cpp  MultiClientWindow.h  MultiClientWindow.ui
src/Elab/: CMakeLists.txt  Downsampler.cpp  Downsampler.h  ElabMain.cpp  ElabWindow.cpp  ElabWindow.h  ElabWindow.ui  Matcher.cpp  Matcher.h  MatrixOfCloud.cpp  MatrixOfCloud.h  SetOfCloud.cpp  SetOfCloud.h
src/Server/: CMakeLists.txt  KinectWidget.cpp  KinectWidget.h  KinectWidget.ui  ServerMain.cpp  ServerWindow.cpp  ServerWindow.h  ServerWindow.ui
src/Utilities/: CloudListModel.cpp  CloudListModel.h  CloudListView.cpp  CloudListView.h  CloudListView.ui  CloudViewer.cpp  CloudViewer.h  CloudViewer.ui  CustomPointCloud.h  IDlist.cpp  IDlist.h  IDlist.ui  LogWidget.cpp  LogWidget.h  LogWidget.ui  Transform.cpp  Transform.h  TransformationWidget.cpp  TransformationWidget.h  TransformationWidget.ui  define.h  registration.cpp  registration.h
src/Viewer/: CMakeLists.txt  ViewerMain.cpp  ViewerWindow.cpp  ViewerWindow.h  ViewerWindow.ui
